<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">
    <ProgressBar
        android:id="@+id/pgBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@color/textColorWhite"
        android:indeterminateTint="@color/textColorBlue"
        android:layout_marginTop="-7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/pls_enter_otp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/otp1"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:hint="1"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_circular_editbox"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/otp2"
                android:textSize="18dp"
                android:hint="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:background="@drawable/ic_circular_editbox"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/otp3"
                android:textSize="18dp"
                android:hint="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:background="@drawable/ic_circular_editbox"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/otp4"
                android:textSize="18dp"
                android:hint="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:background="@drawable/ic_circular_editbox"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:id="@+id/linlay_resend_button"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:text="@string/code_note_rec"/>

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlue"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:textStyle="normal"
                android:text="@string/resend"/>


        </LinearLayout>








    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>